# ParticleSim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: c-cpp.yml
benchmarks/: CMakeLists.txt  bench_layout.cpp  bench_partitioning.cpp  bench_update.cpp
examples/: console.cpp
include/: benchmark_helper.hpp  soa_container.hpp
include/core/: allocator.hpp  free_list.hpp  memory_arena.hpp  soa_container.hpp  soa_field.hpp  vector.hpp
include/math/: vector.hpp
include/particlesim/: allocator.hpp  parallel_scheduler.hpp  particle.hpp  particle_system.hpp  profiler.hpp  spatial_partitioning.hpp
src/: particle.cpp  particle_system.cpp  spatial_partitioning.cpp
tests/: test_allocator.cpp  test_helpers.cpp  test_helpers.hpp  test_particle.cpp  test_particle_basics.cpp  test_particle_system.cpp  test_spatial_partitioning.cpp  test_vector2d.cpp
tests/core/: test_allocator.cpp  test_vector2d.cpp
